# MCPServerTest

./: pyproject.toml  server.py
experiments/: BGE_M3_test.py  Qwen_test.py  deepseek_coder_test.py  embedding_bio_tools.py  embedding_tools_test.py  entropy_experiment.py  function_parser.py  function_similarity_test.py  natural_language_parser.py
experiments/bio_tools/: biochemistry.py  biochemistry_descriptions.py  cell_biology.py  cell_biology_descriptions.py  microbiology.py  microbiology_descriptions.py  molecularbiology_descriptions.py  moleculary_biology.py
experiments/classes/: derivative_approx.py  lin_alg_tool.py  matrix_analysis_tool.py
prompts/: ava.md
resources/: readme.md
